--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type ="text/css" href ="{{ url_for('static/css', filename='main.css') }}"
+<link rel="stylesheet" type ="text/css" href ="{{ url_for('static', filename='main.css') }}"
 
 <style>
 
